# hnswlib

./: .clangd  .gitignore  AGENTS.md  run_all.sh  run_benchmark_only.sh  run_sift1m_benchmark.sh
benchmark/: BENCHMARK_README.md  CMakeLists.txt  bench_hotpotqa.cpp  bench_sift1m.cpp  io_utils.h  memory_utils.h  metrics.h  plan.md  progress.md  run_ablation_test.sh  timer.h
scripts/: 02_generate_embeddings.py  03_compute_knn_gt.py  04_export_vecs.py
scripts/common/: aggregate_results.py  collect_meta.py  plot_results.py
scripts/dim_ablation/: plot_results.py  prepare_data.py  run_ablation.sh
scripts/hotpotqa/: generate_embeddings_simple.py  parse_data.py  run_all.sh  run_benchmark.sh  run_latency_ablation.sh
scripts/locomo/: download_data.py  parse_data.py  run_all.sh  run_benchmark.sh
scripts/sift1m/: download_data.py  run_benchmark.sh
scripts/visualize/: dataset_visualizer.py  search_trace_visualizer.py
